k8s-yamls-master/k8s-yamls-master/live/aks-aks-prd-westus2-001/nginx-ingress-controller/1-ns.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  annotations:
    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"Key": "kubernetes.azure.com/scalesetpriority", "Operator": "Equal", "Value": "spot", "Effect": "NoSchedule"}]'
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    project: ingress-nginx
    namespace: ingress-nginx
    istio-injection: disabled
