k8s-yamls-master/k8s-yamls-master/live/aks-aks-prd-westus2-001/nginx-ingress-controller/ingress-ext.yaml
# Source: ingress-nginx/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-ipv4: 10.223.4.249
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: "/healthz"
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    helm.sh/chart: ingress-nginx-4.3.0
    app.kubernetes.io/name: ingress-nginx-ext
    app.kubernetes.io/instance: ingress-nginx-ext
    app.kubernetes.io/version: "1.4.0"
    app.kubernetes.io/part-of: ingress-nginx-ext
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller-ext
  namespace: ingress-nginx
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ipFamilyPolicy: SingleStack
  ipFamilies: 
    - IPv4
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
      appProtocol: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
      appProtocol: https
  selector:
    app.kubernetes.io/name: ingress-nginx-ext
    app.kubernetes.io/instance: ingress-nginx-ext
    app.kubernetes.io/component: controller
---
# Source: ingress-nginx/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.3.0
    app.kubernetes.io/name: ingress-nginx-ext
    app.kubernetes.io/instance: ingress-nginx-ext
    app.kubernetes.io/version: "1.4.0"
    app.kubernetes.io/part-of: ingress-nginx-ext
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller-ext
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx-ext
      app.kubernetes.io/instance: ingress-nginx-ext
      app.kubernetes.io/component: controller
  replicas: 4
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx-ext
        app.kubernetes.io/instance: ingress-nginx-ext
        app.kubernetes.io/component: controller
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: controller
          image: "registry.k8s.io/ingress-nginx/controller:v1.4.0@sha256:34ee929b111ffc7aa426ffd409af44da48e5a0eea1eb2207994d9e0c0882d143"
          imagePullPolicy: IfNotPresent
          lifecycle: 
            preStop:
              exec:
                command:
                - /wait-shutdown
          args:
            - /nginx-ingress-controller
            # - --v=5
            - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller-ext
            - --election-id=ingress-controller-leader-ext
            - --controller-class=k8s.io/ingress-nginx-ext
            - --ingress-class=nginx-ext
            - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller-ext
            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
            - --enable-ssl-chain-completion=false
            - --default-ssl-certificate=ingress-nginx/star-fullchain.medimpact.com.tls
            - --http-port=8080
            - --https-port=9443
          securityContext: 
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
            runAsUser: 101
            allowPrivilegeEscalation: false
          livenessProbe: 
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe: 
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
            - name: webhook
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: webhook-cert
              mountPath: /usr/local/certificates/
              readOnly: true
          resources: 
            requests:
              cpu: 100m
              memory: 90Mi
      nodeSelector: 
        kubernetes.io/os: linux
      serviceAccountName: ingress-nginx
      terminationGracePeriodSeconds: 300
      volumes:
        - name: webhook-cert
          secret:
            secretName: ingress-nginx-admission
---
# Source: ingress-nginx/templates/controller-ingressclass.yaml
# We don't support namespaced ingressClass yet
# So a ClusterRole and a ClusterRoleBinding is required
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    helm.sh/chart: ingress-nginx-4.3.0
    app.kubernetes.io/name: ingress-nginx-ext
    app.kubernetes.io/instance: ingress-nginx-ext
    app.kubernetes.io/version: "1.4.0"
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: nginx-ext
spec:
  controller: k8s.io/ingress-nginx-ext
